// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Bold",
        "fontSize": 14,
        "fontStyle": "normal",
        "letterSpacing": 1,
        "lineHeight": 18,
        "textAlignVertical": "center",
        "textTransform": "uppercase",
      },
      undefined,
    ]
  }
>
   · 
</Text>
`;

exports[`render dot with style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Bold",
        "fontSize": 14,
        "fontStyle": "normal",
        "letterSpacing": 1,
        "lineHeight": 18,
        "textAlignVertical": "center",
        "textTransform": "uppercase",
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
   · 
</Text>
`;
